--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ do<html lang="en">
             }
         }
     </style>
-    <title>berdo Detail</title>
+    <title>candy Detail</title>
 </head>
 
 <body>
