--- a/index.html
+++ b/index.html
@@ -25,26 +25,27 @@ do<html lang="en">
 
 <body>
 
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_01.jpg" alt="candy1">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_02.jpg" alt="candy2">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_03.jpg" alt="candy3">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_04.jpg" alt="candy4">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_05.jpg" alt="candy5">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_06.jpg" alt="candy6">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_07.jpg" alt="candy7">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_08.jpg" alt="candy8">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_09.jpg" alt="candy9">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_10.jpg" alt="candy10">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_11.jpg" alt="candy11">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_12.jpg" alt="candy12">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_13.jpg" alt="candy13">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_14.jpg" alt="candy14">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_15.jpg" alt="candy15">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_16.jpg" alt="candy16">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_17.jpg" alt="candy17">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_18.jpg" alt="candy18">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_19.jpg" alt="candy19">
-    <img src="//ecimg.cafe24img.com/pg162b82901483004/damigreen/tencel/candy/240307_Shunia_20.jpg" alt="candy20">
+    <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_0.jpg" alt="캔디_0" style="width: 860px; height: auto;" alt="캔디_0">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_01.jpg" alt="캔디_1" style="width: 860px; height: auto;" alt="캔디_1">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_02.jpg" alt="캔디_2" style="width: 860px; height: auto;" alt="캔디_2">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_03.jpg" alt="캔디_3" style="width: 860px; height: auto;" alt="캔디_3">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_04.jpg" alt="캔디_4" style="width: 860px; height: auto;" alt="캔디_4">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_05.jpg" alt="캔디_5" style="width: 860px; height: auto;" alt="캔디_5">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_06.jpg" alt="캔디_6" style="width: 860px; height: auto;" alt="캔디_6">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_07.jpg" alt="캔디_7" style="width: 860px; height: auto;" alt="캔디_7">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_08.jpg" alt="캔디_8" style="width: 860px; height: auto;" alt="캔디_8">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_09.jpg" alt="캔디_9" style="width: 860px; height: auto;" alt="캔디_9">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_10.jpg" alt="캔디_10" style="width: 860px; height: auto;" alt="캔디_10">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_11.jpg" alt="캔디_11" style="width: 860px; height: auto;" alt="캔디_11">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_12.jpg" alt="캔디_색상_1" style="width: 860px; height: auto;" alt="캔디_색상_1">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_13.jpg" alt="캔디_색상_2" style="width: 860px; height: auto;" alt="캔디_색상_2">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_14.jpg" alt="캔디_색상_3" style="width: 860px; height: auto;" alt="캔디_색상_3">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_15.jpg" alt="캔디_색상_4" style="width: 860px; height: auto;" alt="캔디_색상_4">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_16.jpg" alt="캔디_색상_5" style="width: 860px; height: auto;" alt="캔디_색상_5">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_17.jpg" alt="캔디_색상_6" style="width: 860px; height: auto;" alt="캔디_색상_6">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_18.jpg" alt="캔디_색상_7" style="width: 860px; height: auto;" alt="캔디_색상_7">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_19.jpg" alt="캔디_색상_8" style="width: 860px; height: auto;" alt="캔디_색상_8">
+<img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_20.jpg" alt="캔디_색상_9" style="width: 860px; height: auto;" alt="캔디_색상_9">
   
   
     
