--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-do<html lang="en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -26,6 +26,7 @@ do<html lang="en">
 <body>
 
     <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_0.jpg" alt="캔디_0" style="width: 860px; height: auto;" alt="캔디_0">
+    <br><br><br><br></br></br></br></br>
 <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_01.jpg" alt="캔디_1" style="width: 860px; height: auto;" alt="캔디_1">
 <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_02.jpg" alt="캔디_2" style="width: 860px; height: auto;" alt="캔디_2">
 <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_03.jpg" alt="캔디_3" style="width: 860px; height: auto;" alt="캔디_3">
