--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
 <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_18.jpg" alt="캔디_색상_7" style="width: 860px; height: auto;" alt="캔디_색상_7">
 <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_19.jpg" alt="캔디_색상_8" style="width: 860px; height: auto;" alt="캔디_색상_8">
 <img src="https://dameeliving.cafe24.com/Dameeliving/Product/Bedding/Tencel/07_candy/240307_Shunia_20.jpg" alt="캔디_색상_9" style="width: 860px; height: auto;" alt="캔디_색상_9">
-<img src="https://dameeliving.cafe24.com/Dameeliving/Manage/Washing/manage_update.jpg" alt="세탁및관리" style="width: 860px; height: auto;" alt="세탁및관리">
-  
+
+<br><br><br><br>
+<img src="https://dameeliving.cafe24.com/Dameeliving/Manage/brand/dameeliving_ending.jpg" alt="다미리빙엔딩" style="width: 860px; height: auto;" alt="다미리빙엔딩">
+<br><br><br><br>
+<img src="https://dameeliving.cafe24.com/Dameeliving/Manage/Washing/dameeliving_washing.jpg" alt="세탁및관리" style="width: 860px; height: auto;" alt="세탁및관리">  
   
     
 
